@@ -13,6 +13,9 @@
 		identifier="Nokia 6230"
 		driver="6230" />
 	<phone_entry
+		identifier="6230i"
+		driver="6230" />
+	<phone_entry
 		identifier="Nokia 6300"
 		driver="6510" />
 	<phone_entry
